// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Audio authenticate=false 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="https://plus4u.net/path/trusted.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="https://plus4u.net/path/trusted.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio authenticate=null 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="https://plus4u.net/path/trusted.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="https://plus4u.net/path/trusted.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio authenticate=true 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="https://plus4u.net/path/trusted.mp3?access_token=token-for-tests"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="https://plus4u.net/path/trusted.mp3?access_token=token-for-tests"
  />
</audio>
`;

exports[`UU5.Bricks.Audio autoPlay=false 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio autoPlay=true 1`] = `
<audio
  autoPlay={true}
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio className="my-classname" 1`] = `
<audio
  className="uu5-bricks-audio my-classname uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio controlled=false 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio controlled=true 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio default props 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio disabled=false 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio disabled=true 1`] = `
<span
  className="uu5-bricks-audio uu5-common-disabled uu5-bricks-audio-wrapper"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
  <audio
    className="uu5-common-disabled uu5-bricks-audio-player"
    controls={true}
    id="uuID"
    onEnded={[Function]}
    onPause={[Function]}
    onPlay={[Function]}
    style={Object {}}
    title={null}
  >
    <source
      src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
    />
  </audio>
</span>
`;

exports[`UU5.Bricks.Audio docKit examples UU5.Bricks.Audio should render without crash 1`] = `
<div
  className="uu5-bricks-container uu5-bricks-container-spacing"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Header
    content="autoplay"
    id="uuID02"
    key="uuID02"
    level={2}
  />
  <Audio
    autoPlay={true}
    id="uuID03"
    key="uuID03"
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
  <Header
    content="loop"
    id="uuID06"
    key="uuID06"
    level={2}
  />
  <Audio
    id="uuID07"
    key="uuID07"
    loop={true}
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
  <Header
    content="preload"
    id="uuID010"
    key="uuID010"
    level={2}
  />
  <Audio
    id="uuID011"
    key="uuID011"
    preload="none"
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
  <Header
    content="muted"
    id="uuID012"
    key="uuID012"
    level={2}
  />
  <Audio
    id="uuID013"
    key="uuID013"
    muted={true}
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</div>
`;

exports[`UU5.Bricks.Audio hidden=false 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio hidden=true 1`] = `
<audio
  className="uu5-bricks-audio uu5-common-hidden uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio id="myId" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="myId"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio loop=false 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio loop=true 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  loop={true}
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio mainAttrs=undefined 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio muted=false 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio muted=true 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  muted={true}
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio name="myName" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  name="myName"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel="bigBox" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel="bigBoxCollection" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel="box" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel="boxCollection" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel="container" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Audio nestingLevel="page" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Audio nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.Audio nestingLevel="spa" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio noIndex=false 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio noIndex=true 1`] = `
<audio
  className="uu5-bricks-audio uu5-noindex uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio preload="auto" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio preload="metadata" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  preload="metadata"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio preload="none" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  preload="none"
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio pureRender=false 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio pureRender=true 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio selected=false 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio selected=true 1`] = `
<audio
  className="uu5-bricks-audio uu5-common-selected uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio style="padding:8px; borderRadius: 2px" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio style={"backgroundColor":"red","color":"blue"} 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;

exports[`UU5.Bricks.Audio tooltip="My Tooltip" 1`] = `
<audio
  className="uu5-bricks-audio uu5-bricks-audio-player"
  controls={true}
  id="uuID"
  key="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  onEnded={[Function]}
  onPause={[Function]}
  onPlay={[Function]}
  style={Object {}}
  title="My Tooltip"
>
  <source
    src="http://www.noiseaddicts.com/samples_1w72b820/3724.mp3"
  />
</audio>
`;
